veil-tests/src/compile_tests/fail/redactable_empty_struct.rs
fn main() {}

#[derive(veil::Redactable)]
struct EmptyStruct;
