veil-tests/src/compile_tests/fail/redactable_empty_struct.stderr
error: this trait cannot be derived for structs with no fields
 --> src/compile_tests/fail/redactable_empty_struct.rs:4:1
  |
4 | struct EmptyStruct;
  | ^^^^^^
